# Learning-for-CUDA

reduction/: CMakeLists.txt  main.cpp  reduction_cpu.cpp  reduction_cpu.hpp
reduction/cpu/: reduction_cpu.hpp
reduction/cuda/: reduction_kernel.cu
reduction/gpu/: helper_cuda.h  reduction_gpu.h  reduction_kernel.cu
reduction/reduction/: reduction.cpp
